@@ -1,4 +1,4 @@
-// Copyright (C) 2009-2017 Internet Systems Consortium, Inc. ("ISC")
+// Copyright (C) 2009-2019 Internet Systems Consortium, Inc. ("ISC")
 //
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -290,7 +290,7 @@ TEST_F(NameTest, fromText) {
 }
 
 // The following test uses a name data that was produced by
-// fuz testing and causes an unexpected condition in stringParser.
+// fuzz testing and causes an unexpected condition in stringParser.
 // Formerly this condition was trapped by an assert, but for
 // robustness it has been replaced by a throw.
 TEST_F(NameTest, unexpectedParseError) {
